kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__binary_expr_5.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"22 > 11 and 111 < 222\"####)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        22,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 2,
                        },
                        ops: [
                            Gt,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            11,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 5,
                                end_line: 1,
                                end_column: 7,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 21,
            },
            op: Bin(
                And,
            ),
            right: Node {
                node: Compare(
                    Compare {
                        left: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        111,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 12,
                            end_line: 1,
                            end_column: 15,
                        },
                        ops: [
                            Lt,
                        ],
                        comparators: [
                            Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            222,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 18,
                                end_line: 1,
                                end_column: 21,
                            },
                        ],
                    },
                ),
                filename: "",
                line: 1,
                column: 12,
                end_line: 1,
                end_column: 21,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 21,
}

